# sign_to_text_module

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_YEAR_PROJECT_REPORT.md  LICENSE  METRICS.md  README.md  SECURITY.md  TECHNICAL_AUDIT.md  adapter_model.py  adapter_training.py  analyze_conv_frontend.py  augment_pipeline.py  augment_video_pipeline.py  augmentations.py  balance_processed_dataset.py  benchmark_onnx.py  check_class_files.py  check_dataset.py  check_npy_zeros.py  cleanup_dataset_npy.py  collect_data.py  config.py  config_image.py  convert_friend_dataset.py  dataset.py  dataset_image.py  debug_model.py  diary.md  ensemble.py  ensemble_image.py  eval_per_class.py  evaluate_quantized_model.py  execution_guide.md  export_onnx.py  find_corrupt_npy.py  fix_train_loop.py  (+58 more)
.github/workflows/: ci.yml
DOCS/: API_VERSIONING.md  ARCHITECTURE.md  ARCHITECTURE_AND_DESIGN.md  ARCHITECTURE_DECISIONS.md  DECISIONS.md  DEVELOPER.md  DISSERTATION_HELP_ARCHIVE.md  ERRORS.md  FINAL_YEAR_PROJECT_REPORT.md  FYP_REPORT_STRUCTURE.md  PROFILING_LATENCY_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  REPORT_SECTION_4_SIGN_TO_TEXT.md  REPOSITORY_AUDIT.md  TECHNICAL_AUDIT.md  UV_GUIDE.md  VIVA_PREPARATION_GUIDE.md  Vocabulary - Sheet1.csv  codebase_audit_report.md  dataset.md  execution_guide.md  inference_pipeline.md  missing_knowledge_report.md  model_architecture.md  sentence_builder_timeout_fix.md  sign_to_text_api_protocol.md  system_design.md  training_pipeline.md
DOCS/Project_Report_Help/: FYP_REPORT_STRUCTURE.md  REPORT_SECTION_4_SIGN_TO_TEXT.md  VIVA_PREPARATION_GUIDE.md  exhaustive_report_section_6.3.md  final_consolidated_dissertation_chapter.md  final_dissertation_audit.md  forensic_implementation_analysis.md  report_section_6.3.md  system_design.md
Paper/: Paper1  ablation_studies.py  benchmark_results.md  extract_metrics.py  generate_visualizations.py  improved_literature_survey.md  improved_paper_draft.md  improved_pipeline_implementation.md  improved_system_design.md
adapter_weights/: adapter_20260506_095100.pt  adapter_20260513_121132.pt  adapter_test_improved.pt
api/: FEATURE_CONTRACT.md  FRONTEND_HANDOFF.md  README.md  __init__.py  app.py  emergency.py  feedback.py  final_validation_report.md  inference.py  schemas.py  session.py  simulate_frontend.py
archive/: README.md  audit_api.py
assets/: model_metadata.json
benchmarks/: PHASE2_ROBUSTNESS_METRICS.md  robustness_output_v3.txt  robustness_report.md  robustness_report.txt
data/: candidate_map.json  confidence_statistics.json  emergency_config.json  hand_sign_classification.json  sign_categories.json  similar_signs.json
diagrams/: misclassified_rejects.txt
ensemble/: fold_0.pth  fold_1.pth  fold_2.pth  fold_3.pth  fold_4.pth  kfold_manifest.json
ensemble_old/: fold_0.pth  fold_1.pth  fold_2.pth  fold_3.pth  fold_4.pth
experimental/: cvae_landmarks.py  filter_synthetic_samples.py  generate_cvae_samples.py  visualize_latent_space.py
models/: model.onnx  model_int8.onnx
processed/alive/: MVI_9703.npy  MVI_9703_aug1.npy  MVI_9703_aug2.npy  MVI_9703_aug3.npy  MVI_9703_aug4.npy  MVI_9703_aug5.npy  MVI_9703_aug6.npy  MVI_9703_aug7.npy  MVI_9703_aug8.npy  MVI_9704.npy  MVI_9704_aug1.npy  MVI_9704_aug2.npy  MVI_9704_aug3.npy  MVI_9704_aug4.npy  MVI_9704_aug5.npy  MVI_9704_aug6.npy  MVI_9704_aug7.npy  MVI_9704_aug8.npy  MVI_9705.npy  MVI_9705_aug1.npy  MVI_9705_aug2.npy  MVI_9705_aug3.npy  MVI_9705_aug4.npy  MVI_9705_aug5.npy  MVI_9705_aug6.npy  MVI_9705_aug7.npy  MVI_9705_aug8.npy  MVI_9706.npy  MVI_9706_aug1.npy  MVI_9706_aug2.npy  MVI_9706_aug3.npy  MVI_9706_aug4.npy  MVI_9706_aug5.npy  MVI_9706_aug6.npy  MVI_9706_aug7.npy  MVI_9706_aug8.npy  MVI_9827.npy  MVI_9827_aug1.npy  MVI_9827_aug2.npy  MVI_9827_aug3.npy  (+72 more)
processed/alright/: MVI_0037.npy  MVI_0037_aug1.npy  MVI_0037_aug2.npy  MVI_0037_aug3.npy  MVI_0037_aug4.npy  MVI_0037_aug5.npy  MVI_0037_aug6.npy  MVI_0037_aug7.npy  MVI_0037_aug8.npy  MVI_0038.npy  MVI_0038_aug1.npy  MVI_0038_aug2.npy  MVI_0038_aug3.npy  MVI_0038_aug4.npy  MVI_0038_aug5.npy  MVI_0038_aug6.npy  MVI_0038_aug7.npy  MVI_0038_aug8.npy  MVI_0039.npy  MVI_0039_aug1.npy  MVI_0039_aug2.npy  MVI_0039_aug3.npy  MVI_0039_aug4.npy  MVI_0039_aug5.npy  MVI_0039_aug6.npy  MVI_0039_aug7.npy  MVI_0039_aug8.npy  MVI_0040.npy  MVI_0040_aug1.npy  MVI_0040_aug2.npy  MVI_0040_aug3.npy  MVI_0040_aug4.npy  MVI_0040_aug5.npy  MVI_0040_aug6.npy  MVI_0040_aug7.npy  MVI_0040_aug8.npy  MVI_0043.npy  MVI_0043_aug1.npy  MVI_0043_aug2.npy  MVI_0043_aug3.npy  (+300 more)
processed/bad/: MVI_5161.npy  MVI_5161_aug1.npy  MVI_5161_aug2.npy  MVI_5161_aug3.npy  MVI_5161_aug4.npy  MVI_5161_aug5.npy  MVI_5161_aug6.npy  MVI_5161_aug7.npy  MVI_5161_aug8.npy  MVI_5162.npy  MVI_5162_aug1.npy  MVI_5162_aug2.npy  MVI_5162_aug3.npy  MVI_5162_aug4.npy  MVI_5162_aug5.npy  MVI_5162_aug6.npy  MVI_5162_aug7.npy  MVI_5162_aug8.npy  MVI_5163.npy  MVI_5163_aug1.npy  MVI_5163_aug2.npy  MVI_5163_aug3.npy  MVI_5163_aug4.npy  MVI_5163_aug5.npy  MVI_5163_aug6.npy  MVI_5163_aug7.npy  MVI_5163_aug8.npy  MVI_5241.npy  MVI_5241_aug1.npy  MVI_5241_aug2.npy  MVI_5241_aug3.npy  MVI_5241_aug4.npy  MVI_5241_aug5.npy  MVI_5241_aug6.npy  MVI_5241_aug7.npy  MVI_5241_aug8.npy  MVI_5242.npy  MVI_5242_aug1.npy  MVI_5242_aug2.npy  MVI_5242_aug3.npy  (+254 more)
processed/beautiful/: MVI_9569.npy  MVI_9569_aug1.npy  (+308 more)
scratch/: calibrate_jump_threshold.py
scripts/: augment_pipeline.py  augment_video_pipeline.py  benchmark_gnn.py  benchmark_inference.py  benchmark_webcam_pipeline.py  check_train_val_disjoint.py  debug_model.py  evaluate_quantized_model.py  export_onnx.py  quality_filter_hybrid.py  quantize_model.py  quantize_onnx.py  run_kfold_gnn.ps1  run_kfold_gnn.sh  setup.ps1  setup.sh  smoke_gnn_test.py  train_kfold_resume.py  update_hand_classification.py  verify_repo.py
src/: train_continuous.py
tests/: conftest.py  test_ws_smoke.py
tools/: check_weights.py  debug_onnx_input_check.py  dependency_analyzer.py  generate_mermaid.py  generate_negative_root.py  grid_search_archived.py  run_adapter_test.py  validate_npy.py
(+22026 files in other folders)
